Fixing bugs with scrolling on mobile devices part2.

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -285,7 +285,7 @@
 
                         /* Modifier styles for heading in KDA section. */
                         .h4--modifier1 {
-                            font-size: 0.8rem;
+                            height: 25px;
                         }
 
                         /* Styles for stats in the KDA section. */
